--- a/2020.7.14/三角形最小路径和.md
+++ b/2020.7.14/三角形最小路径和.md
@@ -47,5 +47,20 @@ public:
         return ans;
     }
 };
+
+
+
+class Solution {
+public:
+    int minimumTotal(vector<vector<int>>& triangle) {
+        int n=triangle.size();
+        for(int i=n-2;i>=0;i--){
+            for(int j=0;j<=i;j++){
+                triangle[i][j]+=min(triangle[i+1][j+1],triangle[i+1][j]);
+            }
+        }
+        return triangle[0][0];
+    }
+};
 ```
 
