--- a/2020.8.17/平衡二叉树.md
+++ b/2020.8.17/平衡二叉树.md
@@ -60,5 +60,37 @@ public:
         return max(getHeight(root->left), getHeight(root->right)) + 1;
     }
 };
+
+
+
+
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    bool isBalanced(TreeNode* root) {
+        return getHeight(root) != -1;
+    }
+    int getHeight(TreeNode* root) {
+        if(root == NULL)
+            return 0;
+        int leftHeight = getHeight(root->left);
+        if(leftHeight == -1)
+            return -1;
+        int rightHeight = getHeight(root->right);
+        if(rightHeight == -1)
+            return -1;
+        if(abs(leftHeight - rightHeight) > 1)
+            return -1;
+        return max(getHeight(root->left), getHeight(root->right)) + 1;
+    }
+};
 ```
 
