--- a/2020.8.21/二叉树的最小深度.md
+++ b/2020.8.21/二叉树的最小深度.md
@@ -50,6 +50,25 @@ public:
         return 0;
     }
 };
+
+
+
+
+class Solution {
+public:
+    int minDepth(TreeNode* root) {
+        if(root == NULL)
+            return 0;
+        if(root->left == nullptr && root->right == nullptr)
+            return 1;
+        int min_depth = INT_MAX;
+        if(root->left)
+            min_depth = min(minDepth(root->left), min_depth);
+        if(root->right)
+            min_depth = min(minDepth(root->right), min_depth);
+        return min_depth + 1;
+    }
+};
 ```
 
 
